--- a/test/index.html
+++ b/test/index.html
@@ -5,14 +5,13 @@
   <title>Test</title>
 
   <link rel="import" href="./components/test1.html">
-<!--   <link rel="import" href="/components/test2.html">
-  <link rel="import" href="/components/test3.html">
- --></head>
+</head>
 <body>
 
   <test-element-one></test-element-one>
 
   <script src="../src/document.currentScript.js"></script>
+  <script src="../src/shadow-dom-css.js"></script>
   <script src="../src/shadow-dom.js"></script>
   <script src="../src/document.registerElement.js"></script>
   <script src="../src/html-imports.js"></script>
