--- a/test/shadow-dom-css.html
+++ b/test/shadow-dom-css.html
@@ -9,6 +9,7 @@
 <body>
 
   <my-element></my-element>
+  <my-element class="red"></my-element>
 
   <script src="../src/document.currentScript.js"></script>
   <script src="../src/shadow-dom-css.js"></script>
