Update document.currentScript polyfill

--- a/test/nested-html-imports.html
+++ b/test/nested-html-imports.html
@@ -5,6 +5,7 @@
   <title>Document</title>
 
   <link rel="import" href="./components/sub-import1.html">
+  <link rel="import" href="./components/sub-import2.html">
 </head>
 <body>
 
