--- a/test/nested-html-imports.html
+++ b/test/nested-html-imports.html
@@ -12,6 +12,9 @@
   <parent-element></parent-element>
   <child-element></child-element>
 
+  <script src="../src/HTMLElement.js"></script>
+  <script src="../src/Element.addEventListener.js"></script>
+  <script src="../src/Array.prototype.forEach.js"></script>
   <script src="../src/document.currentScript.js"></script>
   <script src="../src/shadow-dom-css.js"></script>
   <script src="../src/shadow-dom.js"></script>
